--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
   <script>
-
+//Strictly a testing comment line.
   const raidZone = new Phaser.Geom.Rectangle(480, 0, 1440, 1080);
   const startZone = new Phaser.Geom.Circle(960, 720, 100);
 
