--- a/index.html
+++ b/index.html
@@ -54,15 +54,19 @@
     },
 
     preload: function () {
-	  this.load.image('title', 'assets/button-godeeper-1.png');
+	  this.load.image('title', 'assets/title.png');
       this.load.image('goDeeper1', 'assets/button-godeeper-1.png');
       this.load.image('goDeeper2', 'assets/button-godeeper-2.png');
+	  this.load.audio('click', 'assets/se-type.wav');
     },
 
     create: function () {
-      const goDeeperButton = this.add.image('960', '540', 'goDeeper1');
+      this.add.image(960, 540, "title");
+	  click = this.sound.add("click");
+	  const goDeeperButton = this.add.image(960, 540, 'goDeeper1');
       goDeeperButton.setInteractive();
       goDeeperButton.on('pointerup', function () {
+		click.play();
         this.scene.start('RaidScene');
       }, this);
     },
